maCliAuthData-hbupd/maCliApi.h

//////////////////////////////////////////////////////////////////////////
//回调申明
typedef void *MACLIHANDLE;
typedef struct
{
  char szServerName[MACLI_USERINFO_MAX + 1];    //连接名称
  char szUserId    [MACLI_USERINFO_MAX + 1];    //用户名  
  char szPassword  [MACLI_USERINFO_MAX + 1];    //密码    
  char szAppId     [MACLI_USERINFO_MAX + 1];    //APP标识 
  char szAuthCode  [MACLI_USERINFO_MAX + 1];    //认证码  
} ST_MACLI_USERINFO;
typedef struct
{
  char szFuncId[MACLI_FUNC_ID_SIZE + 1];        //功能号
  char szMsgId[MACLI_MSG_ID_SIZE + 1];          //消息ID
  int nTimeout;                                 //调用超时
  char szUserData1[MACLI_USERDATA_MAX + 1];     //用户数据1
  char szUserData2[MACLI_USERDATA_MAX + 1];     //用户数据2
} ST_MACLI_SYNCCALL;
typedef struct
{
  char szFuncId[MACLI_FUNC_ID_SIZE + 1];        //功能号
  char szMsgId[MACLI_MSG_ID_SIZE + 1];          //消息ID
  int nTimeout;                                 //调用超时
  char szUserData1[MACLI_USERDATA_MAX + 1];     //用户数据1
  char szUserData2[MACLI_USERDATA_MAX + 1];     //用户数据2
} ST_MACLI_ASYNCALL;
typedef struct
{
  char szTopic[MACLI_PUB_TOPIC_SIZE + 1];       //主题
  char szAcceptSn[MACLI_MSG_ID_SIZE + 1];       //订阅受理号
  int nTimeout;                                 //调用超时
  char szUserData1[MACLI_USERDATA_MAX + 1];     //用户数据1
  char szUserData2[MACLI_USERDATA_MAX + 1];     //用户数据2
} ST_MACLI_PUBCALL;
//连接
MACLIAPI int MACLI_STDCALL maCli_Open(MACLIHANDLE p_hHandle, ST_MACLI_USERINFO *p_pstUserInfo);
MACLIAPI int MACLI_STDCALL maCli_MonitorOpen(MACLIHANDLE p_hHandle, ST_MACLI_USERINFO *p_pstUserInfo);
MACLIAPI int MACLI_STDCALL maCli_Close(MACLIHANDLE p_hHandle);
//调用1
MACLIAPI int MACLI_STDCALL maCli_SyncCall(MACLIHANDLE p_hHandle, ST_MACLI_SYNCCALL *p_pstSyncCall);
MACLIAPI int MACLI_STDCALL maCli_AsynCall(MACLIHANDLE p_hHandle, ST_MACLI_ASYNCALL *p_pstAsynCall);
MACLIAPI int MACLI_STDCALL maCli_AsynGetReply(MACLIHANDLE p_hHandle, ST_MACLI_ASYNCALL *p_pstAsynCall);
MACLIAPI int MACLI_STDCALL maCli_GetPsContent(MACLIHANDLE p_hHandle, ST_MACLI_PUBCALL *p_pstPubCall);
//调用2
MACLIAPI int MACLI_STDCALL maCli_SyncCall2(MACLIHANDLE p_hHandle, ST_MACLI_SYNCCALL *p_pstSyncCall,
  const unsigned char *p_pszReqData, int p_iReqDataLen, unsigned char **p_ppszAnsData, int *p_piAnsDataLen);
MACLIAPI int MACLI_STDCALL maCli_AsynCall2(MACLIHANDLE p_hHandle, ST_MACLI_ASYNCALL *p_pstAsynCall,
  const unsigned char *p_pszReqData, int p_iReqDataLen);
MACLIAPI int MACLI_STDCALL maCli_AsynGetReply2(MACLIHANDLE p_hHandle, ST_MACLI_ASYNCALL *p_pstAsynCall,
  unsigned char **p_ppszAnsData, int *p_piAnsDataLen);
MACLIAPI int MACLI_STDCALL maCli_GetPsContent2(MACLIHANDLE p_hHandle, ST_MACLI_PUBCALL *p_pstPubCall,
  unsigned char **p_ppszPubData, int *p_piPubDataLen);
MACLIAPI int MACLI_STDCALL maCli_AsynMonitorCall2(MACLIHANDLE p_hHandle, ST_MACLI_ASYNCALL *p_pstAsynCall,
  const unsigned char *p_pszReqData, int p_iReqDataLen);
MACLIAPI int MACLI_STDCALL maCli_AsynMonitorGetReply2(MACLIHANDLE p_hHandle, ST_MACLI_ASYNCALL *p_pstAsynCall,
  unsigned char **p_ppszAnsData, int *p_piAnsDataLen);
//组包(请求)
MACLIAPI int MACLI_STDCALL maCli_Make(MACLIHANDLE p_hHandle, unsigned char **p_ppszReqData, int *p_piReqDataLen);
MACLIAPI int MACLI_STDCALL maCli_BeginWrite(MACLIHANDLE p_hHandle);
MACLIAPI int MACLI_STDCALL maCli_EndWrite(MACLIHANDLE p_hHandle);
MACLIAPI int MACLI_STDCALL maCli_CreateTable(MACLIHANDLE p_hHandle);
MACLIAPI int MACLI_STDCALL maCli_AddRow(MACLIHANDLE p_hHandle);
MACLIAPI int MACLI_STDCALL maCli_SaveRow(MACLIHANDLE p_hHandle);
MACLIAPI int MACLI_STDCALL maCli_SetHdrValue(MACLIHANDLE p_hHandle, const unsigned char *p_pszValue, int p_iValLen, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetHdrValueS(MACLIHANDLE p_hHandle, const char *p_pszValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetHdrValueN(MACLIHANDLE p_hHandle, int p_iValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetHdrValueC(MACLIHANDLE p_hHandle, char p_chValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetHdrValueD(MACLIHANDLE p_hHandle, double p_dValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetHdrValueL(MACLIHANDLE p_hHandle, __int64 p_i64Value, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetValue(MACLIHANDLE p_hHandle, const unsigned char *p_pszValue, int p_iValLen, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetValueS(MACLIHANDLE p_hHandle, const char *p_pszValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetValueN(MACLIHANDLE p_hHandle, int p_iValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetValueC(MACLIHANDLE p_hHandle, char p_chValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetValueD(MACLIHANDLE p_hHandle, double p_dValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_SetValueL(MACLIHANDLE p_hHandle, __int64 p_i64Value, const char *p_pszFieldIdx);
//解包(应答)
MACLIAPI int MACLI_STDCALL maCli_Parse(MACLIHANDLE p_hHandle, const unsigned char *p_pszAnsData, int p_iAnsDataLen);
MACLIAPI int MACLI_STDCALL maCli_GetTableCount(MACLIHANDLE p_hHandle, int *p_piTableCount);
MACLIAPI int MACLI_STDCALL maCli_OpenTable(MACLIHANDLE p_hHandle, int p_iTableIndex);
MACLIAPI int MACLI_STDCALL maCli_GetRowCount(MACLIHANDLE p_hHandle, int *p_piRowCount);
MACLIAPI int MACLI_STDCALL maCli_ReadRow(MACLIHANDLE p_hHandle, int p_iRowIndex);
MACLIAPI int MACLI_STDCALL maCli_GetHdrValue(MACLIHANDLE p_hHandle, unsigned char *p_pszValue, int p_iValSize, int *p_piValLen, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetHdrValueS(MACLIHANDLE p_hHandle, char *p_pszValue, int p_iValSize, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetHdrValueN(MACLIHANDLE p_hHandle, int *p_piValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetHdrValueC(MACLIHANDLE p_hHandle, char *p_pchValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetHdrValueD(MACLIHANDLE p_hHandle, double *p_pdValue, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetHdrValueL(MACLIHANDLE p_hHandle, __int64 *p_pi64Value, int p_iFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetValue(MACLIHANDLE p_hHandle, unsigned char *p_pszValue, int p_iValSize, int *p_piValLen, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetValueS(MACLIHANDLE p_hHandle, char *p_pszValue, int p_iValSize, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetValueN(MACLIHANDLE p_hHandle, int *p_piValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetValueC(MACLIHANDLE p_hHandle, char *p_pchValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetValueD(MACLIHANDLE p_hHandle, double *p_pdValue, const char *p_pszFieldIdx);
MACLIAPI int MACLI_STDCALL maCli_GetValueL(MACLIHANDLE p_hHandle, __int64 *p_pi64Value, const char *p_pszFieldIdx);