cos-c#demo/maCliApi4CSharp/maCliApi.cs


        //连接
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_Open")]
        public static extern int maCli_Open(IntPtr Handle, ref ST_MACLI_USERINFO UserInfo);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_MonitorOpen")]
        public static extern int maCli_MonitorOpen(IntPtr Handle, ref ST_MACLI_USERINFO UserInfo);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_Close")]
        public static extern int maCli_Close(IntPtr Handle);

        //调用1
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SyncCall")]
        public static extern int maCli_SyncCall(IntPtr Handle, ref ST_MACLI_SYNCCALL SyncCall);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AsynCall")]
        public static extern int maCli_AsynCall(IntPtr Handle, ref ST_MACLI_ASYNCALL AsynCall);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AsynGetReply")]
        public static extern int maCli_AsynGetReply(IntPtr Handle, out ST_MACLI_ASYNCALL AsynCall);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetPsContent")]
        public static extern int maCli_GetPsContent(IntPtr Handle, out ST_MACLI_PUBCALL PubCall);

        //调用2
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SyncCall2")]
        public static extern int maCli_SyncCall2(IntPtr Handle, ref ST_MACLI_SYNCCALL SyncCall,
            IntPtr ReqData, int ReqDataLen, out IntPtr AnsData, out int AnsDataLen);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AsynCall2")]
        public static extern int maCli_AsynCall2(IntPtr Handle, ref ST_MACLI_ASYNCALL AsynCall,
            IntPtr ReqData, int ReqDataLen);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AsynGetReply2")]
        public static extern int maCli_AsynGetReply2(IntPtr Handle, out ST_MACLI_ASYNCALL AsynCall,
            out IntPtr AnsData, out int AnsDataLen);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetPsContent2")]
        public static extern int maCli_GetPsContent2(IntPtr Handle, out ST_MACLI_PUBCALL PubCall,
            out IntPtr PubData, out int PubDataLen);

        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AsynMonitorCall2")]
        public static extern int maCli_AsynMonitorCall2(IntPtr Handle, ref ST_MACLI_ASYNCALL AsynCall,
            byte[] ReqData, int ReqDataLen);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AsynMonitorGetReply2")]
        public static extern int maCli_AsynMonitorGetReply2(IntPtr Handle, ref ST_MACLI_ASYNCALL AsynCall,
            out IntPtr AnsData, out int AnsDataLen);

        //组包(请求)
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_Make")]
        public static extern int maCli_Make(IntPtr Handle, out IntPtr ReqData, out int ReqDataLen);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_BeginWrite")]
        public static extern int maCli_BeginWrite(IntPtr Handle);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_EndWrite")]
        public static extern int maCli_EndWrite(IntPtr Handle);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_CreateTable")]
        public static extern int maCli_CreateTable(IntPtr Handle);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_AddRow")]
        public static extern int maCli_AddRow(IntPtr Handle);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SaveRow")]
        public static extern int maCli_SaveRow(IntPtr Handle);

        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValue")]
        public static extern int maCli_SetHdrValue(IntPtr Handle, IntPtr Value, int ValLen, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValueS")]
        public static extern int maCli_SetHdrValueS(IntPtr Handle, IntPtr Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValueS")]
        public static extern int maCli_SetHdrValueS(IntPtr Handle, string Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValueN")]
        public static extern int maCli_SetHdrValueN(IntPtr Handle, int Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValueC")]
        public static extern int maCli_SetHdrValueC(IntPtr Handle, byte Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValueD")]
        public static extern int maCli_SetHdrValueD(IntPtr Handle, double Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetHdrValueL")]
        public static extern int maCli_SetHdrValueL(IntPtr Handle, long Value, int FieldIdx);

        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetValue")]
        public static extern int maCli_SetValue(IntPtr Handle, IntPtr Value, int ValLen, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetValueS")]
        public static extern int maCli_SetValueS(IntPtr Handle, string Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetValueN")]
        public static extern int maCli_SetValueN(IntPtr Handle, int Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetValueC")]
        public static extern int maCli_SetValueC(IntPtr Handle, byte Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetValueD")]
        public static extern int maCli_SetValueD(IntPtr Handle, double Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_SetValueL")]
        public static extern int maCli_SetValueL(IntPtr Handle, long Value, string FieldIdx);
        
        //解包(应答)
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_Parse")]
        public static extern int maCli_Parse(IntPtr Handle, IntPtr AnsData, int AnsDataLen);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetTableCount")]
        public static extern int maCli_GetTableCount(IntPtr Handle, out int TableCount);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_OpenTable")]
        public static extern int maCli_OpenTable(IntPtr Handle, int TableIndex);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetRowCount")]
        public static extern int maCli_GetRowCount(IntPtr Handle, out int RowCount);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_ReadRow")]
        public static extern int maCli_ReadRow(IntPtr Handle, int RowIndex);

        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetHdrValue")]
        public static extern int maCli_GetHdrValue(IntPtr Handle, IntPtr Value, int ValSize, ref int ValLen, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetHdrValueS")]
        public static extern int maCli_GetHdrValueS(IntPtr Handle, IntPtr Value, int ValSize, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetHdrValueN")]
        public static extern int maCli_GetHdrValueN(IntPtr Handle, ref int Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetHdrValueC")]
        public static extern int maCli_GetHdrValueC(IntPtr Handle, ref char Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetHdrValueD")]
        public static extern int maCli_GetHdrValueD(IntPtr Handle, ref double Value, int FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetHdrValueL")]
        public static extern int maCli_GetHdrValueL(IntPtr Handle, ref long Value, int FieldIdx);

        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetValue")]
        public static extern int maCli_GetValue(IntPtr Handle, IntPtr Value, int ValSize, out IntPtr ValLen, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetValueS")]
        public static extern int maCli_GetValueS(IntPtr Handle, IntPtr Value, int ValSize, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetValueN")]
        public static extern int maCli_GetValueN(IntPtr Handle, ref int Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetValueC")]
        public static extern int maCli_GetValueC(IntPtr Handle, ref byte Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetValueD")]
        public static extern int maCli_GetValueD(IntPtr Handle, ref double Value, string FieldIdx);
        [DllImport("maCliApi.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall, EntryPoint = "maCli_GetValueL")]
        public static extern int maCli_GetValueL(IntPtr Handle, ref long Value, string FieldIdx);
